# blockclock-backend

./: .version  Cargo.toml  Dockerfile  README.md  build_image.sh  deploy.sh  docker-compose.yml  run_local.sh  test_sigs  tth_sorted.csv  ver_test.sh
abi/BlockTime.sol/: BlockTime.json
abi/CallBreaker.sol/: CallBreaker.json
db/: Dockerfile  build_db_image.sh  init.sql  set_passwords.sh  setup.sql
db/patches/: 0.2.0-2025-01-22.sql
src/: address_str.rs  call_breaker.rs  claim_avatar.rs  db.rs  get_time_keepers.rs  main.rs  meantime.rs  onboarding.rs  referral.rs  referral_code.rs  referrers_fetch.rs  time_pool.rs  time_signature.rs  timer.rs  update_referred_from.rs  user_data.rs
