[package]
name = "blockclock-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-util = "0.2.2"
clap = { version = "4.5.21", features = ["derive"] }
ethers = { version = "2.0.14", features = ["ws"] }
md5 = "0.7.0"
mysql = "25.0.1"
parse_duration = "2.1.1"
serde = "1.0.215"
serde_json = "1.0.134"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
